--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <a class="link" href="#">Site Map</a>
           </li>
           <li class="list-items">
-            <a class="link" href="#">General terms and Conditions</a>
+            <a class="link" href="#">General Terms and Conditions</a>
           </li>
           <li class="list-items">
             <a class="link" href="#">Data and Privacy</a>
