--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <nav class="nav-header">
         <ul class="nav-list">
           <li class="nav-list-button">
-              <a href="#" class="header-nav-link">Accomodations</a>
+              <a href="index.html#accommodations-container" class="header-nav-link">Accomodations</a>
           </li>
           <li class="nav-list-button">
-              <a href="#" class="header-nav-link">Activities</a>
+              <a href="index.html#activities-container" class="header-nav-link">Activities</a>
           </li>
         </ul>
       </nav>
@@ -255,19 +255,18 @@
         <div class="activities-double">
           <a href="#" target="_blank">
             <button class="activities-button">
-              <div class="activities-card-double" style="margin-bottom: 15px">
-               <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="activities-card-img-double">
+              <div class="activities-card-double">
+                <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="activities-card-img-double">
                 <h3 class="activity-card-text">Pomogues Fort</h3>
              </div>
             </button>
           </a>
-
           <a href="#" target="_blank">
             <button class="activities-button">
               <div class="activities-card-double">
-               <img src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activities-card-img-double">
+                <img src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activities-card-img-double">
                 <h3 class="activity-card-text">Frioul Island</h3>
-             </div>
+              </div>
             </button>
           </a>
         </div>
@@ -282,10 +281,10 @@
         <div class="activities-double">
           <a href="#" target="_blank">
             <button class="activities-button">
-              <div class="activities-card-double" style="margin-bottom: 15px">
+              <div class="activities-card-double">
                <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="activities-card-img-double">
-                <h3 class="activity-card-text">Notre-Dame-de-la-Garde</h3>
-             </div>
+               <h3 class="activity-card-text">Notre-Dame-de-la-Garde</h3>
+              </div>
             </button>
           </a>
           <a href="#" target="_blank">
