Updated the code - pre-final version

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" media="screen and (min-width: 769px) and (max-width: 992px)" href="css/tablet-992px.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/smartphone-768px.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="css/tablet-992px.css">
 
   </head>
   <body>
@@ -35,7 +35,7 @@
      <!-- Searchbar -->
 
     <div class="searchbar-heading">
-    <h1 class="header-heading1">Find a place for your dream vacation</h1>
+    <h1 class="header-heading1"><b>Find a place for your dream vacation</b></h1>
     <p class="header-paragraph">Downtown or in nature</p>
     </div>
 
@@ -44,7 +44,7 @@
         <i class="fas fa-map-marker-alt" style="color: black;"></i>
       </button>
         <input type="text" placeholder="Marseille, France" class="search-input">
-        <button type="submit" class="search-submit">Search</button>
+        <button type="submit" class="search-submit"><span><b>Search</b></span><i class="far fa-search" style=" font-size: large; color: white;"></i></button>
     </div>
 
     <!-- Filters -->
@@ -68,7 +68,7 @@
 
     <div class="acc-information">
       <i class="fa fa-info"></i>
-      <p class="acc-information-text">More than 500 accomodations are available in this city</p>
+      <p class="acc-information-text">More than 500 accomodations are available in this <br>city<br></p>
     </div>
 
     <!-- Accommodation -->
@@ -76,7 +76,7 @@
     <div id="accommodations-container">
 
       <section class="accommodations-marseille">
-        <h3 class="accommodations-marseille-heading">Accommodations in Marseille</h3>
+        <h3 class="accommodations-marseille-heading"><b>Accommodations in Marseille</b></h3>
         <div class="accommodations-marseille-cards">
 
           <div class="acc-row">
@@ -86,7 +86,7 @@
                 <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Auberge la Cannebière</h3>
-                  <p>Night starting at 25€</p>
+                  <p>Night starting at <b>25€</b></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i  class="fa fa-star"></i>
@@ -101,7 +101,7 @@
                 <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Hôtel du port</h3>
-                  <p>Night starting at 52€</p>
+                  <p>Night starting at <b>52€</b></h3></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i  class="fa fa-star"></i>
@@ -116,7 +116,7 @@
                 <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Les mouettes Hotel" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Les mouettes Hotel</h3>
-                  <p>Night starting at 76€</p>
+                  <p>Night starting at <b>76€</b></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i  class="fa fa-star"></i>
@@ -135,7 +135,7 @@
                 <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la mer" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Hôtel de la mer</h3>
-                  <p>Night starting at 46€</p>
+                  <p>Night starting at <b>46€</b></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
@@ -150,7 +150,7 @@
                 <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Auberge Le Panier</h3>
-                  <p>Night starting at 23€</p>
+                  <p>Night starting at <b>23€</b></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i  class="fa fa-star"></i>
@@ -165,7 +165,7 @@
                 <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Hôtel chez Amina</h3>
-                  <p>Night starting at 96€</p>
+                  <p>Night starting at <b>96€</b></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i  class="fa fa-star"></i>
@@ -187,7 +187,7 @@
 
       <aside>
 
-        <h3 class="most-pop-heading">Most Popular<i class="fa fa-star" style="color: black;"></i></h3>
+        <h3 class="most-pop-heading"><b>Most Popular</b><i class="fa fa-star" style="color: black;"></i></h3>
         
         <div class="most-pop-cards">
 
@@ -196,12 +196,14 @@
               <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Morning Sun Hotel" class="most-pop-img">
               <div class="most-pop-text">
                 <h3>Morning Sun Hotel</h3>
-                <p>Night starting at 128€</p>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
+                <p>Night starting at <b>128€</b></p>
+                <div class="most-pop-stars">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                </div>
               </div>
             </div>
           </a>
@@ -211,12 +213,14 @@
               <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="A cœur de l'eau Bed and Breakfast" class="most-pop-img">
               <div class="most-pop-text">
                 <h3>A cœur de l'eau Bed and Breakfast</h3>
-                <p>Night starting at 71€</p>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star" style="color: #bdbdbd;"></i>
+                <p>Night starting at <b>71€</b></p>
+                <div class="most-pop-stars">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star" style="color: #bdbdbd;"></i>
+                </div>
               </div>
             </div>
           </a>
@@ -226,12 +230,14 @@
               <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Tout bleu et Blanc Hotel" class="most-pop-img">
               <div class="most-pop-text">
                 <h3>Tout bleu et Blanc Hotel</h3>
-                <p>Night starting at 68€</p>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star" style="color: #bdbdbd;"></i>
+                <p>Night starting at <b>68€</b></p>
+                <div class="most-pop-stars">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star" style="color: #bdbdbd;"></i>
+                </div>
               </div>
             </div>
           </a>
@@ -244,7 +250,7 @@
     <!-- Activities -->
 
     <section id="activities-container">
-      <h3 class="activities-marseille-heading">Activities in Marseille</h3>
+      <h3 class="activities-marseille-heading"><b>Activities in Marseille</b></h3>
       <div class="activities-marseille">
         
         <div class="activities-single">
