pre-final version

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" class="accommodations-marseille-card-img">
                 <div class="accommodations-marseille-card-text">
                   <h3>Hôtel du port</h3>
-                  <p>Night starting at <b>52€</b></h3></p>
+                  <p>Night starting at <b>52€</b></p>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i  class="fa fa-star"></i>
