--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <i class="fas fa-map-marker-alt" style="color: black;"></i>
       </button>
         <input type="text" placeholder="Marseille, France" class="search-input">
-        <button type="submit" class="search-submit"><span><b>Search</b></span><i class="far fa-search" style=" font-size: large; color: white;"></i></button>
+        <button type="submit" class="search-submit"><span><b>Search</b></span><i class="fa fa-search" style=" font-size: large; color: white;"></i></button>
     </div>
 
     <!-- Filters -->
