--- a/index.html
+++ b/index.html
@@ -53,14 +53,22 @@
 
       <div class="filters-heading1"><h3>Filters</h3></div>
       <div class="filters-buttons">
-        <i class="fa fa-money-bill-wave"></i>
-        <button class="filter-single-btn-text">Low cost</button>
-        <i class="fa fa-child"></i>
-        <button class="filter-single-btn-text">Family-friendly</button>
-        <i class="fa fa-heart"></i>
-        <button class="filter-single-btn-text">Romantic</button>
-        <i class="fa fa-dog"></i>
-        <button class="filter-single-btn-text">Pets allowed</button>
+        <div class="low-cost-filter">
+          <i class="fa fa-money-bill-wave"></i>
+          <button class="filter-single-btn-text">Low cost</button>
+        </div>
+        <div class="family-friendly-filter">
+          <i class="fa fa-child"></i>
+          <button class="filter-single-btn-text">Family-friendly</button>
+        </div>
+        <div class="romantic-filter">
+          <i class="fa fa-heart"></i>
+          <button class="filter-single-btn-text">Romantic</button>
+        </div>
+        <div class="pets-allowed-filter">
+          <i class="fa fa-dog"></i>
+          <button class="filter-single-btn-text">Pets allowed</button>
+        </div>
       </div>
     </div>
 
